Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-01-31 Kimmo
 PATCH: [ 1648182 ] Separate Compare options from DiffWrapper
  Src: CompareOptions.h DiffWrapper.h DirDoc.cpp DirDoc.h Merge.dsp
  Src new file: CompareOptions.cpp
 PATCH: [ 1646638 ] Catalan translation update
  Submitted by Jordi Vilar
   Src/Languages/Catalan: MergeCatalan.rc

2007-01-28 Jochen
 Merge7z DllBuild 0019 - Unassociate .exe filename extension from NSIS format
  ArchiveSupport/Merge7z: Merge7zCommon.cpp Merge7zCommon.h revision.txt
 Support 7-Zip versions 4.43 & 4.44
  ArchiveSupport/Merge7z new files: Merge7z443.dsp Merge7z444.dsp
  ArchiveSupport/Merge7zInstaller: Files.rc2

2007-01-28 Takashi
 PATCH: [ 1640741 ] patch for BUG:[ 1635100 ] Inefficient word-wrap code
  Src: MergeEditView.cpp MergeEditView.h
  Src/edtlib: ccrystaltextview.cpp ccrystaltextview.h

2007-01-27 Takashi
 PATCH: [ 1644668 ] Fix ANSI regexps(2)
  Src: DiffWrapper.cpp FileFilterHelper.cpp FilterList.cpp

2007-01-25 Kimmo
 PATCH: [ 1644668 ] Fix ANSI regexps
  Src: DiffWrapper.cpp FileFilterHelper.cpp FilterList.cpp FilterList.h
 PATCH: [ 1644820 ] Implement post-compare linefilters for folder compare
  Src: DiffContext.cpp DiffContext.h DiffThread.cpp DiffThread.h DirDoc.cpp
   DirDoc.h FolderCmp.cpp FolderCmp.h

2007-01-25 Tim
 PATCH: [ 1644785 ] 24bit icons for "Window" menu
  Based on icons by Alexander Skinner
  Src/res: cascade.bmp change_pane.bmp close.bmp horizontally.bmp vertically.bmp
 PATCH: [ 1644800 ] 24bit "Goto" icon
  Based on icons by Alexander Skinner
  Src/res: go_to.bmp

2007-01-24 Kimmo
 PATCH: [ 1642809 ] Move compare code out from DiffFileData
  Src: DiffFileData.cpp DiffFileData.h DiffWrapper.cpp DirScan.cpp
   DirViewColItems.cpp Merge.dsp
  Src new files: FolderCmp.cpp FolderCmp.h

2007-01-17 Kimmo
 BUG: [ 1637433 ] Forget selected filter after close
  Src: Merge.cpp OptionsInit.cpp

2007-01-16 Kimmo